--- a/style/dialog/search.scss
+++ b/style/dialog/search.scss
@@ -1,186 +1,186 @@
-@use "sass:math";
-@use "../common" as *;
-@use "../component/form";
-@use "../component/list";
-@use "big";
+@use 'sass:math';
+@use '../common' as *;
+@use '../component/form';
+@use '../component/list';
+@use 'big';
 
 $padding: $fn-space;
-$btn-h: get($component-size, "base");
+$btn-h: get($component-size, 'base');
 $form-h: 42px;
 
 .b3-dialog__container:has(#searchList) {
-  width: 80vw !important;
-  .fn__flex-column[style*="80vh"] {
-    border-radius: big.$dialog-radius !important;
-  }
+    width: 80vw !important;
+    .fn__flex-column[style*='80vh'] {
+        border-radius: big.$dialog-radius !important;
+    }
 
-  .search__header {
-    width: 100% !important;
-  }
+    .search__header {
+        width: 100% !important;
+    }
 
-  .fn__loading--top {
-    top: $form-h;
-    border-radius: big.$dialog-radius;
-  }
+    .fn__loading--top {
+        top: $form-h;
+        border-radius: big.$dialog-radius;
+    }
 }
 
 .search {
-  &__header {
-    &.b3-form__icon {
-      @include form.search-input($form-h, 0, 16px);
+    &__header {
+        &.b3-form__icon {
+            @include form.search-input($form-h, 0, 16px);
 
-      // 搜索文本框
-      .b3-text-field {
-        flex-shrink: unset;
-        border: none !important;
-        background-color: get($bg, "page", 1);
+            // 搜索文本框
+            .b3-text-field {
+                flex-shrink: unset;
+                border: none !important;
+                background-color: get($bg, 'page', 1);
 
-        &#searchInput,
-        &#replaceInput {
-          padding-left: $form-h + $fn-space !important;
+                &#searchInput,
+                &#replaceInput {
+                    padding-left: $form-h + $fn-space !important;
+                }
+
+                &:hover,
+                &:focus {
+                    box-shadow: unset;
+                    border: none;
+                }
+            }
+
+            .block__icons {
+                border-radius: 0 big.$dialog-radius 0 0;
+                height: $form-h;
+                padding: math.div($form-h - 28px, 2) $fn-space;
+                .block__icon {
+                    @include svg-div(28px, 12px, $important: true);
+                }
+            }
         }
 
-        &:hover,
-        &:focus {
-          box-shadow: unset;
-          border: none;
-        }
-      }
+        // 搜索结果筛选行
+        &.fn__flex {
+            margin: 0;
+            height: $form-h;
+            padding: 0 $fn-space 0 $fn-space * 2 !important;
+            border-bottom: $fn-border;
+            .block__icon {
+                @include svg-div(28px, 12px, $important: true);
+                margin: auto 0;
+            }
 
-      .block__icons {
-        border-radius: 0 big.$dialog-radius 0 0;
-        height: $form-h;
-        padding: math.div($form-h - 28px, 2) $fn-space;
-        .block__icon {
-          @include svg-div(28px, 12px, $important: true);
+            #searchResult {
+                @include v-center($form-h);
+                margin: 0;
+            }
+
+            #searchPathInput:not(:empty) {
+                @include component($border: 1);
+                border-radius: get($radius, 'max');
+                border: 1px solid transparent;
+                padding-right: 28px;
+                font-size: get($font-size, 'small');
+                &:hover {
+                    border-color: get($border, 3);
+                }
+                .search__rmpath {
+                    $w: 18px;
+                    @include svg($w, 8px);
+                    @include item('page');
+                    top: math.div(get($component-size, 'base') - $w, 2) - 1px;
+                    right: math.div(get($component-size, 'base') - $w, 2) - 1px;
+                }
+            }
+
+            #searchInclude {
+                margin: auto 0;
+            }
         }
-      }
+
+        &:nth-child(4) {
+            height: $form-h;
+            padding: 8px !important;
+        }
     }
 
-    // 搜索结果筛选行
-    &.fn__flex {
-      margin: 0;
-      height: $form-h;
-      padding: 0 $fn-space 0 $fn-space * 2 !important;
-      border-bottom: $fn-border;
-      .block__icon {
-        @include svg-div(28px, 12px, $important: true);
-        margin: auto 0;
-      }
-
-      #searchResult {
-        @include v-center($form-h);
-        margin: 0;
-      }
-
-      #searchPathInput:not(:empty) {
-        @include component($border: 1);
-        border-radius: get($radius, "max");
-        border: 1px solid transparent;
-        padding-right: 28px;
-        font-size: get($font-size, "small");
-        &:hover {
-          border-color: get($border, 3);
-        }
-        .search__rmpath {
-          $w: 18px;
-          @include svg($w, 8px);
-          @include item("page");
-          top: math.div(get($component-size, "base") - $w, 2) - 1px;
-          right: math.div(get($component-size, "base") - $w, 2) - 1px;
-        }
-      }
-
-      #searchInclude {
-        margin: auto 0;
-      }
+    &__arrowdown {
+        margin-left: $interval;
     }
-  }
-
-  &__arrowdown {
-    margin-left: $interval;
-  }
 }
 
 // 搜索结果列表
 #searchList {
-  padding: $fn-space;
+    padding: $fn-space;
 
-  > .b3-list-item {
-    // &:not([data-type="search-item"]) {
-    //   @include item("component");
-    // }
-    // 分组
-    + div:not([data-type="search-item"]) {
-      box-shadow: 16px 0 rgba(var(--page-1), 1) inset,
-        17px 0 rgba(var(--border-3), 1) inset;
-      > [data-type="search-item"] {
-        height: 32px;
-        margin-left: 24px !important;
-        padding-left: list.$padding !important;
-      }
-    }
+    > .b3-list-item {
+        // &:not([data-type="search-item"]) {
+        //   @include item("component");
+        // }
+        // 分组
+        + div:not([data-type='search-item']) {
+            box-shadow: 16px 0 rgba(var(--page-1), 1) inset, 17px 0 rgba(var(--border-3), 1) inset;
+            > [data-type='search-item'] {
+                height: 32px;
+                margin-left: 24px !important;
+                padding-left: list.$padding !important;
+            }
+        }
 
-    // 未分组
-    &[data-type="search-item"] {
-      $text-h: list.$text-h;
-      $padding: $interval;
-      padding: $padding;
-      display: block;
-      height: auto;
-      padding-bottom: $text-h + $padding;
-      .b3-list-item {
-        &__graphic {
-          position: absolute;
-          top: $padding * 2;
+        // 未分组
+        &[data-type='search-item'] {
+            $text-h: list.$text-h;
+            $padding: $interval;
+            padding: $padding;
+            display: block;
+            height: auto;
+            padding-bottom: $text-h + $padding;
+            .b3-list-item {
+                &__graphic {
+                    position: absolute;
+                    top: $padding * 2;
+                }
+                &__text {
+                    overflow-y: auto !important;
+                    text-overflow: ellipsis !important;
+                    -webkit-box-orient: inherit;
+                    margin: 0;
+                    padding: $padding $padding $padding * 2 20px + $padding;
+                }
+                &__meta {
+                    position: absolute;
+                    bottom: $padding * 2;
+                    left: $padding * 2 + 20px;
+                    max-width: 100%;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    margin: 0;
+                    width: calc(100% - $padding * 4 - 20px);
+                }
+            }
         }
-        &__text {
-          overflow-y: auto !important;
-          text-overflow: ellipsis !important;
-          -webkit-box-orient: inherit;
-          margin: 0;
-          padding: $padding $padding $padding * 2 20px + $padding;
-        }
-        &__meta {
-          position: absolute;
-          bottom: $padding * 2;
-          left: $padding * 2 + 20px;
-          max-width: 100%;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          margin: 0;
-          width: calc(100% - $padding * 4 - 20px);
-        }
-      }
     }
-  }
 }
 
 // 搜索预览
 #searchPreview {
-  border-bottom-right-radius: big.$dialog-radius;
-  &[style*="height"] {
-    border-bottom-left-radius: big.$dialog-radius;
-  }
-  // 面包屑
-  .protyle {
-    &-breadcrumb {
-      &__bar {
-        margin-right: $fn-space;
-        // display: -webkit-box;
-      }
-      .block__icon {
-        @include svg-div(
-          get($component-size, "exsmall"),
-          10px,
-          $important: true
-        );
-      }
+    border-bottom-right-radius: big.$dialog-radius;
+    &[style*='height'] {
+        border-bottom-left-radius: big.$dialog-radius;
     }
+    // 面包屑
+    .protyle {
+        &-breadcrumb {
+            &__bar {
+                margin-right: $fn-space;
+                // display: -webkit-box;
+            }
+            .block__icon {
+                @include svg-div(get($component-size, 'exsmall'), 10px, $important: true);
+            }
+        }
 
-    &-wysiwyg {
-      padding: 16px 48px 90px !important;
+        &-wysiwyg {
+            padding: 16px 48px 90px !important;
+        }
     }
-  }
 }
