fix: :bug: 删除了主题自带的日历功能，并适配了日历插件

--- a/style/common/utils.scss
+++ b/style/common/utils.scss
@@ -107,7 +107,7 @@
 }
 
 @mixin item-primary($important: false) {
-  @include item("primary", 1, $important);
+  @include item("primarybg", 1, $important);
   @include color("anti", $important);
 }
 
