--- a/style/index.scss
+++ b/style/index.scss
@@ -1,16 +1,20 @@
-@use "common/css-var";
+@use 'common/css-var';
 
-@use "base";
+@use 'base';
 
-@use "component";
+@use 'component';
 
-@use "dialog";
+@use 'dialog';
 
-@use "layout";
+@use 'layout';
 
-@use "panel";
+@use 'panel';
 
-@use "protyle";
+@use 'protyle';
 
-@import "/appearance/themes/Rem Craft/theme/tdesign/light.css";
-@import "/appearance/themes/Rem Craft/plugin/link-icon/main.css";
+@import '/appearance/themes/Rem Craft/theme/tdesign/light.css';
+@import '/appearance/themes/Rem Craft/plugin/link-icon/main.css';
+
+[data-name='Calendar'] * {
+    box-sizing: content-box;
+}
