--- a/theme/one-dark/dark.scss
+++ b/theme/one-dark/dark.scss
@@ -94,10 +94,10 @@
   --pop-3: 50, 56, 66;
   --pop-4: 56, 63, 74;
 
-  --primary-1: var(--brand-base);
-  --primary-2: var(--brand-hover);
-  --primary-3: var(--brand-active);
-  --primary-4: var(--brand-active);
+  --primarybg-1: var(--brand-base);
+  --primarybg-2: var(--brand-hover);
+  --primarybg-3: var(--brand-active);
+  --primarybg-4: var(--brand-active);
 
   --focus-1: var(--brand-base);
   --focus-2: var(--brand-hover);
