--- a/style/component/switch.scss
+++ b/style/component/switch.scss
@@ -52,8 +52,8 @@ $spacing-hover: math.div($switch-h - $btn-w-hover, 2) - $border-w;
   }
 
   &:checked {
-    @include item("primary");
-    border-color: get($bg, "primary", 1);
+    @include item("primarybg");
+    border-color: get($bg, "primarybg", 1);
 
     &::after {
       background-color: get($bg, "page", 1);
@@ -66,7 +66,7 @@ $spacing-hover: math.div($switch-h - $btn-w-hover, 2) - $border-w;
     }
 
     &:hover {
-      border-color: get($bg, "primary", 2);
+      border-color: get($bg, "primarybg", 2);
       &::after {
         top: $spacing-hover;
         right: $spacing-hover + $btn-w;
@@ -74,7 +74,7 @@ $spacing-hover: math.div($switch-h - $btn-w-hover, 2) - $border-w;
     }
 
     &:active {
-      border-color: get($bg, "primary", 3);
+      border-color: get($bg, "primarybg", 3);
     }
   }
 }
