--- a/theme/tdesign/dark.scss
+++ b/theme/tdesign/dark.scss
@@ -93,10 +93,10 @@
   --pop-3: var(--gray-5);
   --pop-4: var(--gray-6);
 
-  --primary-1: var(--brand-base);
-  --primary-2: var(--brand-hover);
-  --primary-3: var(--brand-active);
-  --primary-4: var(--brand-active);
+  --primarybg-1: var(--brand-base);
+  --primarybg-2: var(--brand-hover);
+  --primarybg-3: var(--brand-active);
+  --primarybg-4: var(--brand-active);
 
   --focus-1: var(--brand-base);
   --focus-2: var(--brand-hover);
