--- a/theme/tdesign/light.scss
+++ b/theme/tdesign/light.scss
@@ -103,10 +103,10 @@
   --pop-3: var(--gray-2);
   --pop-4: var(--gray-3);
 
-  --primary-1: var(--brand-base);
-  --primary-2: var(--brand-hover);
-  --primary-3: var(--brand-active);
-  --primary-4: var(--brand-active);
+  --primarybg-1: var(--brand-base);
+  --primarybg-2: var(--brand-hover);
+  --primarybg-3: var(--brand-active);
+  --primarybg-4: var(--brand-active);
 
   --focus-1: var(--brand-1);
   --focus-2: var(--brand-2);
