--- a/style/dialog/readme.scss
+++ b/style/dialog/readme.scss
@@ -1,76 +1,73 @@
+@use 'sass:math';
+@use '../common' as *;
+@use 'big';
 
-@use "sass:math";
-@use "../common" as *;
-@use "big";
-
-$com-bg: get($bg, "page", 1);
-$com-radius: get($radius, "large");
+$com-bg: get($bg, 'page', 1);
+$com-radius: get($radius, 'large');
 
 //集市Readme
 .config-bazaar__readme {
-  background-color: get($bg, "base", 1);
-  border-radius: big.$dialog-radius;
+    background-color: get($bg, 'base', 1);
+    border-radius: big.$dialog-radius;
 
-  .item {
-    // 侧栏
-    &__side {
-      background-color: $com-bg;
-      border-radius: $com-radius;
-      width: 280px;
+    .item {
+        // 侧栏
+        &__side {
+            background-color: $com-bg;
+            border-radius: $com-radius;
+            width: 320px;
 
-      // 按钮
-      .b3-button {
-        // 返回按钮
-        &--outline[data-type="goBack"] {
-          $w: get($component-size, "base");
-          @include svg-div($w, 11px);
-          @include item("page");
-          margin: $fn-space;
-          color: get($text, "secondary");
+            // 按钮
+            .b3-button {
+                // 返回按钮
+                &--outline[data-type='goBack'] {
+                    $w: get($component-size, 'base');
+                    @include svg-div($w, 11px);
+                    @include item('page');
+                    margin: $fn-space;
+                    color: get($text, 'secondary');
+                }
+            }
+            .svg {
+                @include svg(12px);
+                margin-top: 3px;
+            }
         }
-      }
-      .svg {
-        @include svg(12px);
-        margin-top: 3px;
-      }
-    }
 
-    // 侧栏顶部标签
-    &__nav {
-      $h: get($component-size, "small");
-      $margin: $fn-space + math.div(get($component-size, "base") - $h, 2);
+        // 侧栏顶部标签
+        &__nav {
+            $h: get($component-size, 'small');
+            $margin: $fn-space + math.div(get($component-size, 'base') - $h, 2);
 
-      @include v-center($h);
-      width: auto;
-      margin: $margin 30%;
-      border-radius: get($radius, "max");
-      box-shadow: get($shadow, 0);
-      font-size: get($font-size, "small");
-      transform: translateX(
-          0 - math.div(get($component-size, "base") + 2 * $fn-space, 2)
-        )
-        translateY(0px);
-    }
+            @include v-center($h);
+            width: auto;
+            margin: $margin 30%;
+            border-radius: get($radius, 'max');
+            box-shadow: get($shadow, 0);
+            font-size: get($font-size, 'small');
+            transform: translateX(0 - math.div(get($component-size, 'base') + 2 * $fn-space, 2))
+                translateY(0px);
+        }
 
-    // Readme主页
-    &__main {
-      background-color: $com-bg;
-      border-radius: $com-radius;
-    }
+        // Readme主页
+        &__main {
+            background-color: $com-bg;
+            border-radius: $com-radius;
+        }
 
-    // 预览图
-    &__preview {
-      border-radius: unset;
-      margin-bottom: 0;
-      &--fullscreen{
-        border-radius: big.$dialog-radius;
-      }
-    }
+        // 预览图
+        &__preview {
+            border-radius: unset;
+            margin-bottom: 0;
+            &--fullscreen {
+                border-radius: big.$dialog-radius;
+            }
+        }
 
-    // Readme正文
-    &__readme {
-      box-sizing: content-box;
-      padding: 16px 96px 30vh;
+        // Readme正文
+        &__readme {
+            box-sizing: content-box;
+            padding: 16px 96px 30vh;
+        }
     }
-  }
 }
