--- a/style/component/select.scss
+++ b/style/component/select.scss
@@ -5,6 +5,7 @@
     @include component();
     box-shadow: unset;
     background-color: get($bg, 'component', 1);
+    padding-right: 24px;
     &:hover,
     &:focus,
     &:focus-visible {
