--- a/style/dialog/bazaar.scss
+++ b/style/dialog/bazaar.scss
@@ -85,6 +85,7 @@
         padding: 0px 16px;
         height: 24px;
         > .block__icon {
+            @include item('pop', $important: true);
             &.ft__primary {
                 width: auto;
                 @include item-unchange('pop', $important: true);
